Thu Apr 14 19:02:41 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/irb/ext/save-history.rb: suppress warning: method redefined;
	  discarding old save_history=.

Thu Apr 14 14:58:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tkutil/tkutil.c (tk_hash_kv): the third argument can be
	  nil not only an Array.  reported by @windwiny at
	  https://github.com/ruby/ruby/commit/cdaa94e#commitcomment-17096618

Thu Apr 14 14:28:55 2016  cremno phobia  <cremno@mail.ru>

	* cont.c (fiber_initialize_machine_stack_context): fix wrong
	  _MSC_VER check, should be decimal but not hexadecimal.
	  [ruby-core:74936] [Bug #12279]

Thu Apr 14 13:47:52 2016  cremno phobia  <cremno@mail.ru>

	* cont.c (fiber_initialize_machine_stack_context): fix wrong
	  _MSC_VER check, should be decimal but not hexadecimal.
	  [ruby-core:74936] [Bug #12279]

Wed Apr 13 22:51:38 2016  Tanaka Akira  <akr@fsij.org>

	* array.c (rb_ary_sum): Array#sum is implemented.
	  Kahan's compensated summation algorithm for precise sum of float
	  numbers is moved from ary_inject_op in enum.c.

	* enum.c (ary_inject_op): Don't specialize for float numbers.

	  [ruby-core:74569] [Feature #12217] proposed by mrkn.

Wed Apr 13 15:56:35 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_ceil): add an optional parameter, digits, as
	  well as Float#round.  [Feature #12245]

	* numeric.c (flo_floor): add an optional parameter, digits, as
	  well as Integer#floor.  [Feature #12245]

	* numeric.c (int_ceil): add an optional parameter, digits, as
	  well as Integer#round.  [Feature #12245]

	* numeric.c (int_floor): add an optional parameter, digits, as
	  well as Integer#round.  [Feature #12245]

Wed Apr 13 14:47:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (Init_File): add alias File.empty? to File.zero?.
	  [Feature #9969]

Wed Apr 13 14:36:24 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (assign_in_cond): allow multiple assignment in